Add required attribute to zip code input

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
         <div>
             <label for="zip"></label>
             <small>Please enter a ZIP Code</small>
-            <input type="text" id="zip" name="zip" >
+            <input type="text" id="zip" name="zip" required >
         </div>
         <button type="submit">Search</button>
     </form>
